welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T:Array[Int](h)
	var h=getMondeHauteur() 
	var l=getMondeLargeur()
	getCouleurSol()=T(0);
	avance();
	getCouleurSol=T(0)
}
